Fixed header height bug where it was too close to the top

--- a/themes/b2w-theme/sass/_navigation.scss
+++ b/themes/b2w-theme/sass/_navigation.scss
@@ -153,7 +153,7 @@ a {
 	@include desktop {
 		position: relative;
 		justify-content: space-around;
-		align-items: flex-start;
+		align-items: center;
 	}
 	ul {
 		list-style-type: none;
